feat: requestedBooks Crud
